src/sintactico/y.output
   0  $accept : programa $end

   1  programa : definiciones

   2  definiciones :
   3               | definiciones definicion

   4  definicion : definicionVariable
   5             | definicionFuncion
   6             | definicionEstructura

   7  definicionVariable : "VAR" "IDENT" ':' tipo ';'

   8  definicionVariableLocal : "VAR" "IDENT" ':' tipo ';'

   9  definicionparametroFuncion : "IDENT" ':' tipo

  10  tipo : "INT"
  11       | "REAL"
  12       | "CHARACTER"
  13       | "IDENT"
  14       | '[' "LITERALINT" ']' tipo

  15  definicionEstructura : "STRUCT" "IDENT" '{' definicionCampos '}' ';'

  16  definicionCampos :
  17                   | definicionCampos definicionCampo

  18  definicionCampo : "IDENT" ':' tipo ';'

  19  definicionFuncion : "IDENT" '(' parametrosFuncion ')' retorno '{' cuerpo '}'

  20  retorno :
  21          | ':' tipo

  22  parametrosFuncion :
  23                    | parametroFuncion

  24  parametroFuncion : definicionparametroFuncion
  25                   | parametroFuncion ',' definicionparametroFuncion

  26  cuerpo : definicionVariablesFuncion sentencias

  27  definicionVariablesFuncion :
  28                             | definicionVariablesFuncion definicionVariableLocal

  29  sentencias :
  30             | sentencias sentencia

  31  sentencia : "WHILE" '(' expresion ')' '{' sentencias '}'
  32            | "IF" '(' expresion ')' '{' sentencias '}'
  33            | "IF" '(' expresion ')' '{' sentencias '}' "ELSE" '{' sentencias '}'
  34            | "RETURN" ';'
  35            | "RETURN" "NULL" ';'
  36            | "RETURN" expresion ';'
  37            | "READ" expresion ';'
  38            | "PRINT" expresion ';'
  39            | "PRINTSP" expresion ';'
  40            | "PRINTLN" expresion ';'
  41            | "PRINTLN" ';'
  42            | "IDENT" '(' argumentosLlamadaFuncion ')' ';'
  43            | expresion '=' expresion ';'

  44  expresion : '(' expresion ')'
  45            | expresion '+' expresion
  46            | expresion '-' expresion
  47            | expresion '*' expresion
  48            | expresion '/' expresion
  49            | expresion '>' expresion
  50            | expresion '<' expresion
  51            | expresion "IGUAL" expresion
  52            | expresion "AND" expresion
  53            | expresion "OR" expresion
  54            | expresion "MAYORIGUAL" expresion
  55            | expresion "DISTINTO" expresion
  56            | expresion "MENORIGUAL" expresion
  57            | "CAST" '<' tipo '>' '(' expresion ')'
  58            | "LITERALINT"
  59            | "LITERALREAL"
  60            | "LITERALCHAR"
  61            | "IDENT"
  62            | "IDENT" '(' argumentosLlamadaFuncion ')'
  63            | expresion '[' expresion ']'
  64            | expresion '.' "IDENT"
  65            | '!' expresion
  66            | '-' expresion

  67  argumentosLlamadaFuncion :
  68                           | argumentoLlamadaFuncion

  69  argumentoLlamadaFuncion : expresion
  70                          | argumentoLlamadaFuncion ',' expresion

state 0
	$accept : . programa $end  (0)
	definiciones : .  (2)

	.  reduce 2

	programa  goto 1
	definiciones  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : definiciones .  (1)
	definiciones : definiciones . definicion  (3)

	"VAR"  shift 3
	"IDENT"  shift 4
	"STRUCT"  shift 5
	$end  reduce 1

	definicion  goto 6
	definicionVariable  goto 7
	definicionFuncion  goto 8
	definicionEstructura  goto 9


state 3
	definicionVariable : "VAR" . "IDENT" ':' tipo ';'  (7)

	"IDENT"  shift 10
	.  error


state 4
	definicionFuncion : "IDENT" . '(' parametrosFuncion ')' retorno '{' cuerpo '}'  (19)

	'('  shift 11
	.  error


state 5
	definicionEstructura : "STRUCT" . "IDENT" '{' definicionCampos '}' ';'  (15)

	"IDENT"  shift 12
	.  error


state 6
	definiciones : definiciones definicion .  (3)

	.  reduce 3


state 7
	definicion : definicionVariable .  (4)

	.  reduce 4


state 8
	definicion : definicionFuncion .  (5)

	.  reduce 5


state 9
	definicion : definicionEstructura .  (6)

	.  reduce 6


state 10
	definicionVariable : "VAR" "IDENT" . ':' tipo ';'  (7)

	':'  shift 13
	.  error


state 11
	definicionFuncion : "IDENT" '(' . parametrosFuncion ')' retorno '{' cuerpo '}'  (19)
	parametrosFuncion : .  (22)

	"IDENT"  shift 14
	')'  reduce 22

	definicionparametroFuncion  goto 15
	parametrosFuncion  goto 16
	parametroFuncion  goto 17


state 12
	definicionEstructura : "STRUCT" "IDENT" . '{' definicionCampos '}' ';'  (15)

	'{'  shift 18
	.  error


state 13
	definicionVariable : "VAR" "IDENT" ':' . tipo ';'  (7)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"REAL"  shift 22
	"CHARACTER"  shift 23
	.  error

	tipo  goto 24


state 14
	definicionparametroFuncion : "IDENT" . ':' tipo  (9)

	':'  shift 25
	.  error


state 15
	parametroFuncion : definicionparametroFuncion .  (24)

	.  reduce 24


state 16
	definicionFuncion : "IDENT" '(' parametrosFuncion . ')' retorno '{' cuerpo '}'  (19)

	')'  shift 26
	.  error


state 17
	parametrosFuncion : parametroFuncion .  (23)
	parametroFuncion : parametroFuncion . ',' definicionparametroFuncion  (25)

	','  shift 27
	')'  reduce 23


state 18
	definicionEstructura : "STRUCT" "IDENT" '{' . definicionCampos '}' ';'  (15)
	definicionCampos : .  (16)

	.  reduce 16

	definicionCampos  goto 28


state 19
	tipo : '[' . "LITERALINT" ']' tipo  (14)

	"LITERALINT"  shift 29
	.  error


state 20
	tipo : "IDENT" .  (13)

	.  reduce 13


state 21
	tipo : "INT" .  (10)

	.  reduce 10


state 22
	tipo : "REAL" .  (11)

	.  reduce 11


state 23
	tipo : "CHARACTER" .  (12)

	.  reduce 12


state 24
	definicionVariable : "VAR" "IDENT" ':' tipo . ';'  (7)

	';'  shift 30
	.  error


state 25
	definicionparametroFuncion : "IDENT" ':' . tipo  (9)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"REAL"  shift 22
	"CHARACTER"  shift 23
	.  error

	tipo  goto 31


state 26
	definicionFuncion : "IDENT" '(' parametrosFuncion ')' . retorno '{' cuerpo '}'  (19)
	retorno : .  (20)

	':'  shift 32
	'{'  reduce 20

	retorno  goto 33


state 27
	parametroFuncion : parametroFuncion ',' . definicionparametroFuncion  (25)

	"IDENT"  shift 14
	.  error

	definicionparametroFuncion  goto 34


state 28
	definicionEstructura : "STRUCT" "IDENT" '{' definicionCampos . '}' ';'  (15)
	definicionCampos : definicionCampos . definicionCampo  (17)

	"IDENT"  shift 35
	'}'  shift 36
	.  error

	definicionCampo  goto 37


state 29
	tipo : '[' "LITERALINT" . ']' tipo  (14)

	']'  shift 38
	.  error


state 30
	definicionVariable : "VAR" "IDENT" ':' tipo ';' .  (7)

	.  reduce 7


state 31
	definicionparametroFuncion : "IDENT" ':' tipo .  (9)

	.  reduce 9


state 32
	retorno : ':' . tipo  (21)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"REAL"  shift 22
	"CHARACTER"  shift 23
	.  error

	tipo  goto 39


state 33
	definicionFuncion : "IDENT" '(' parametrosFuncion ')' retorno . '{' cuerpo '}'  (19)

	'{'  shift 40
	.  error


state 34
	parametroFuncion : parametroFuncion ',' definicionparametroFuncion .  (25)

	.  reduce 25


state 35
	definicionCampo : "IDENT" . ':' tipo ';'  (18)

	':'  shift 41
	.  error


state 36
	definicionEstructura : "STRUCT" "IDENT" '{' definicionCampos '}' . ';'  (15)

	';'  shift 42
	.  error


state 37
	definicionCampos : definicionCampos definicionCampo .  (17)

	.  reduce 17


state 38
	tipo : '[' "LITERALINT" ']' . tipo  (14)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"REAL"  shift 22
	"CHARACTER"  shift 23
	.  error

	tipo  goto 43


state 39
	retorno : ':' tipo .  (21)

	.  reduce 21


state 40
	definicionFuncion : "IDENT" '(' parametrosFuncion ')' retorno '{' . cuerpo '}'  (19)
	definicionVariablesFuncion : .  (27)

	.  reduce 27

	cuerpo  goto 44
	definicionVariablesFuncion  goto 45


state 41
	definicionCampo : "IDENT" ':' . tipo ';'  (18)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"REAL"  shift 22
	"CHARACTER"  shift 23
	.  error

	tipo  goto 46


state 42
	definicionEstructura : "STRUCT" "IDENT" '{' definicionCampos '}' ';' .  (15)

	.  reduce 15


state 43
	tipo : '[' "LITERALINT" ']' tipo .  (14)

	.  reduce 14


state 44
	definicionFuncion : "IDENT" '(' parametrosFuncion ')' retorno '{' cuerpo . '}'  (19)

	'}'  shift 47
	.  error


state 45
	cuerpo : definicionVariablesFuncion . sentencias  (26)
	definicionVariablesFuncion : definicionVariablesFuncion . definicionVariableLocal  (28)
	sentencias : .  (29)

	"VAR"  shift 48
	'-'  reduce 29
	'!'  reduce 29
	'('  reduce 29
	"IDENT"  reduce 29
	"LITERALINT"  reduce 29
	'}'  reduce 29
	"WHILE"  reduce 29
	"IF"  reduce 29
	"RETURN"  reduce 29
	"READ"  reduce 29
	"PRINT"  reduce 29
	"PRINTSP"  reduce 29
	"PRINTLN"  reduce 29
	"CAST"  reduce 29
	"LITERALREAL"  reduce 29
	"LITERALCHAR"  reduce 29

	definicionVariableLocal  goto 49
	sentencias  goto 50


state 46
	definicionCampo : "IDENT" ':' tipo . ';'  (18)

	';'  shift 51
	.  error


state 47
	definicionFuncion : "IDENT" '(' parametrosFuncion ')' retorno '{' cuerpo '}' .  (19)

	.  reduce 19


state 48
	definicionVariableLocal : "VAR" . "IDENT" ':' tipo ';'  (8)

	"IDENT"  shift 52
	.  error


state 49
	definicionVariablesFuncion : definicionVariablesFuncion definicionVariableLocal .  (28)

	.  reduce 28


state 50
	cuerpo : definicionVariablesFuncion sentencias .  (26)
	sentencias : sentencias . sentencia  (30)

	'-'  shift 53
	'!'  shift 54
	'('  shift 55
	"IDENT"  shift 56
	"LITERALINT"  shift 57
	"WHILE"  shift 58
	"IF"  shift 59
	"RETURN"  shift 60
	"READ"  shift 61
	"PRINT"  shift 62
	"PRINTSP"  shift 63
	"PRINTLN"  shift 64
	"CAST"  shift 65
	"LITERALREAL"  shift 66
	"LITERALCHAR"  shift 67
	'}'  reduce 26

	sentencia  goto 68
	expresion  goto 69


state 51
	definicionCampo : "IDENT" ':' tipo ';' .  (18)

	.  reduce 18


state 52
	definicionVariableLocal : "VAR" "IDENT" . ':' tipo ';'  (8)

	':'  shift 70
	.  error


state 53
	expresion : '-' . expresion  (66)

	'-'  shift 53
	'!'  shift 54
	'('  shift 55
	"IDENT"  shift 71
	"LITERALINT"  shift 57
	"CAST"  shift 65
	"LITERALREAL"  shift 66
	"LITERALCHAR"  shift 67
	.  error

	expresion  goto 72


state 54
	expresion : '!' . expresion  (65)

	'-'  shift 53
	'!'  shift 54
	'('  shift 55
	"IDENT"  shift 71
	"LITERALINT"  shift 57
	"CAST"  shift 65
	"LITERALREAL"  shift 66
	"LITERALCHAR"  shift 67
	.  error

	expresion  goto 73


state 55
	expresion : '(' . expresion ')'  (44)

	'-'  shift 53
	'!'  shift 54
	'('  shift 55
	"IDENT"  shift 71
	"LITERALINT"  shift 57
	"CAST"  shift 65
	"LITERALREAL"  shift 66
	"LITERALCHAR"  shift 67
	.  error

	expresion  goto 74


state 56
	sentencia : "IDENT" . '(' argumentosLlamadaFuncion ')' ';'  (42)
	expresion : "IDENT" .  (61)
	expresion : "IDENT" . '(' argumentosLlamadaFuncion ')'  (62)

	'('  shift 75
	"OR"  reduce 61
	"AND"  reduce 61
	"IGUAL"  reduce 61
	"DISTINTO"  reduce 61
	'<'  reduce 61
	'>'  reduce 61
	"MENORIGUAL"  reduce 61
	"MAYORIGUAL"  reduce 61
	'+'  reduce 61
	'-'  reduce 61
	'*'  reduce 61
	'/'  reduce 61
	'['  reduce 61
	'.'  reduce 61
	'='  reduce 61


state 57
	expresion : "LITERALINT" .  (58)

	.  reduce 58


state 58
	sentencia : "WHILE" . '(' expresion ')' '{' sentencias '}'  (31)

	'('  shift 76
	.  error


state 59
	sentencia : "IF" . '(' expresion ')' '{' sentencias '}'  (32)
	sentencia : "IF" . '(' expresion ')' '{' sentencias '}' "ELSE" '{' sentencias '}'  (33)

	'('  shift 77
	.  error


state 60
	sentencia : "RETURN" . ';'  (34)
	sentencia : "RETURN" . "NULL" ';'  (35)
	sentencia : "RETURN" . expresion ';'  (36)

	'-'  shift 53
	'!'  shift 54
	';'  shift 78
	'('  shift 55
	"IDENT"  shift 71
	"LITERALINT"  shift 57
	"NULL"  shift 79
	"CAST"  shift 65
	"LITERALREAL"  shift 66
	"LITERALCHAR"  shift 67
	.  error

	expresion  goto 80


state 61
	sentencia : "READ" . expresion ';'  (37)

	'-'  shift 53
	'!'  shift 54
	'('  shift 55
	"IDENT"  shift 71
	"LITERALINT"  shift 57
	"CAST"  shift 65
	"LITERALREAL"  shift 66
	"LITERALCHAR"  shift 67
	.  error

	expresion  goto 81


state 62
	sentencia : "PRINT" . expresion ';'  (38)

	'-'  shift 53
	'!'  shift 54
	'('  shift 55
	"IDENT"  shift 71
	"LITERALINT"  shift 57
	"CAST"  shift 65
	"LITERALREAL"  shift 66
	"LITERALCHAR"  shift 67
	.  error

	expresion  goto 82


state 63
	sentencia : "PRINTSP" . expresion ';'  (39)

	'-'  shift 53
	'!'  shift 54
	'('  shift 55
	"IDENT"  shift 71
	"LITERALINT"  shift 57
	"CAST"  shift 65
	"LITERALREAL"  shift 66
	"LITERALCHAR"  shift 67
	.  error

	expresion  goto 83


state 64
	sentencia : "PRINTLN" . expresion ';'  (40)
	sentencia : "PRINTLN" . ';'  (41)

	'-'  shift 53
	'!'  shift 54
	';'  shift 84
	'('  shift 55
	"IDENT"  shift 71
	"LITERALINT"  shift 57
	"CAST"  shift 65
	"LITERALREAL"  shift 66
	"LITERALCHAR"  shift 67
	.  error

	expresion  goto 85


state 65
	expresion : "CAST" . '<' tipo '>' '(' expresion ')'  (57)

	'<'  shift 86
	.  error


state 66
	expresion : "LITERALREAL" .  (59)

	.  reduce 59


state 67
	expresion : "LITERALCHAR" .  (60)

	.  reduce 60


state 68
	sentencias : sentencias sentencia .  (30)

	.  reduce 30


state 69
	sentencia : expresion . '=' expresion ';'  (43)
	expresion : expresion . '+' expresion  (45)
	expresion : expresion . '-' expresion  (46)
	expresion : expresion . '*' expresion  (47)
	expresion : expresion . '/' expresion  (48)
	expresion : expresion . '>' expresion  (49)
	expresion : expresion . '<' expresion  (50)
	expresion : expresion . "IGUAL" expresion  (51)
	expresion : expresion . "AND" expresion  (52)
	expresion : expresion . "OR" expresion  (53)
	expresion : expresion . "MAYORIGUAL" expresion  (54)
	expresion : expresion . "DISTINTO" expresion  (55)
	expresion : expresion . "MENORIGUAL" expresion  (56)
	expresion : expresion . '[' expresion ']'  (63)
	expresion : expresion . '.' "IDENT"  (64)

	"OR"  shift 87
	"AND"  shift 88
	"IGUAL"  shift 89
	"DISTINTO"  shift 90
	'<'  shift 91
	'>'  shift 92
	"MENORIGUAL"  shift 93
	"MAYORIGUAL"  shift 94
	'+'  shift 95
	'-'  shift 96
	'*'  shift 97
	'/'  shift 98
	'['  shift 99
	'.'  shift 100
	'='  shift 101
	.  error


state 70
	definicionVariableLocal : "VAR" "IDENT" ':' . tipo ';'  (8)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"REAL"  shift 22
	"CHARACTER"  shift 23
	.  error

	tipo  goto 102


state 71
	expresion : "IDENT" .  (61)
	expresion : "IDENT" . '(' argumentosLlamadaFuncion ')'  (62)

	'('  shift 103
	"OR"  reduce 61
	"AND"  reduce 61
	"IGUAL"  reduce 61
	"DISTINTO"  reduce 61
	'<'  reduce 61
	'>'  reduce 61
	"MENORIGUAL"  reduce 61
	"MAYORIGUAL"  reduce 61
	'+'  reduce 61
	'-'  reduce 61
	'*'  reduce 61
	'/'  reduce 61
	'['  reduce 61
	']'  reduce 61
	'.'  reduce 61
	','  reduce 61
	';'  reduce 61
	')'  reduce 61
	'='  reduce 61


state 72
	expresion : expresion . '+' expresion  (45)
	expresion : expresion . '-' expresion  (46)
	expresion : expresion . '*' expresion  (47)
	expresion : expresion . '/' expresion  (48)
	expresion : expresion . '>' expresion  (49)
	expresion : expresion . '<' expresion  (50)
	expresion : expresion . "IGUAL" expresion  (51)
	expresion : expresion . "AND" expresion  (52)
	expresion : expresion . "OR" expresion  (53)
	expresion : expresion . "MAYORIGUAL" expresion  (54)
	expresion : expresion . "DISTINTO" expresion  (55)
	expresion : expresion . "MENORIGUAL" expresion  (56)
	expresion : expresion . '[' expresion ']'  (63)
	expresion : expresion . '.' "IDENT"  (64)
	expresion : '-' expresion .  (66)

	'*'  shift 97
	'/'  shift 98
	'['  shift 99
	'.'  shift 100
	"OR"  reduce 66
	"AND"  reduce 66
	"IGUAL"  reduce 66
	"DISTINTO"  reduce 66
	'<'  reduce 66
	'>'  reduce 66
	"MENORIGUAL"  reduce 66
	"MAYORIGUAL"  reduce 66
	'+'  reduce 66
	'-'  reduce 66
	']'  reduce 66
	','  reduce 66
	';'  reduce 66
	')'  reduce 66
	'='  reduce 66


state 73
	expresion : expresion . '+' expresion  (45)
	expresion : expresion . '-' expresion  (46)
	expresion : expresion . '*' expresion  (47)
	expresion : expresion . '/' expresion  (48)
	expresion : expresion . '>' expresion  (49)
	expresion : expresion . '<' expresion  (50)
	expresion : expresion . "IGUAL" expresion  (51)
	expresion : expresion . "AND" expresion  (52)
	expresion : expresion . "OR" expresion  (53)
	expresion : expresion . "MAYORIGUAL" expresion  (54)
	expresion : expresion . "DISTINTO" expresion  (55)
	expresion : expresion . "MENORIGUAL" expresion  (56)
	expresion : expresion . '[' expresion ']'  (63)
	expresion : expresion . '.' "IDENT"  (64)
	expresion : '!' expresion .  (65)

	'*'  shift 97
	'/'  shift 98
	'['  shift 99
	'.'  shift 100
	"OR"  reduce 65
	"AND"  reduce 65
	"IGUAL"  reduce 65
	"DISTINTO"  reduce 65
	'<'  reduce 65
	'>'  reduce 65
	"MENORIGUAL"  reduce 65
	"MAYORIGUAL"  reduce 65
	'+'  reduce 65
	'-'  reduce 65
	']'  reduce 65
	','  reduce 65
	';'  reduce 65
	')'  reduce 65
	'='  reduce 65


state 74
	expresion : '(' expresion . ')'  (44)
	expresion : expresion . '+' expresion  (45)
	expresion : expresion . '-' expresion  (46)
	expresion : expresion . '*' expresion  (47)
	expresion : expresion . '/' expresion  (48)
	expresion : expresion . '>' expresion  (49)
	expresion : expresion . '<' expresion  (50)
	expresion : expresion . "IGUAL" expresion  (51)
	expresion : expresion . "AND" expresion  (52)
	expresion : expresion . "OR" expresion  (53)
	expresion : expresion . "MAYORIGUAL" expresion  (54)
	expresion : expresion . "DISTINTO" expresion  (55)
	expresion : expresion . "MENORIGUAL" expresion  (56)
	expresion : expresion . '[' expresion ']'  (63)
	expresion : expresion . '.' "IDENT"  (64)

	"OR"  shift 87
	"AND"  shift 88
	"IGUAL"  shift 89
	"DISTINTO"  shift 90
	'<'  shift 91
	'>'  shift 92
	"MENORIGUAL"  shift 93
	"MAYORIGUAL"  shift 94
	'+'  shift 95
	'-'  shift 96
	'*'  shift 97
	'/'  shift 98
	'['  shift 99
	'.'  shift 100
	')'  shift 104
	.  error


state 75
	sentencia : "IDENT" '(' . argumentosLlamadaFuncion ')' ';'  (42)
	expresion : "IDENT" '(' . argumentosLlamadaFuncion ')'  (62)
	argumentosLlamadaFuncion : .  (67)

	'-'  shift 53
	'!'  shift 54
	'('  shift 55
	"IDENT"  shift 71
	"LITERALINT"  shift 57
	"CAST"  shift 65
	"LITERALREAL"  shift 66
	"LITERALCHAR"  shift 67
	')'  reduce 67

	expresion  goto 105
	argumentosLlamadaFuncion  goto 106
	argumentoLlamadaFuncion  goto 107


state 76
	sentencia : "WHILE" '(' . expresion ')' '{' sentencias '}'  (31)

	'-'  shift 53
	'!'  shift 54
	'('  shift 55
	"IDENT"  shift 71
	"LITERALINT"  shift 57
	"CAST"  shift 65
	"LITERALREAL"  shift 66
	"LITERALCHAR"  shift 67
	.  error

	expresion  goto 108


state 77
	sentencia : "IF" '(' . expresion ')' '{' sentencias '}'  (32)
	sentencia : "IF" '(' . expresion ')' '{' sentencias '}' "ELSE" '{' sentencias '}'  (33)

	'-'  shift 53
	'!'  shift 54
	'('  shift 55
	"IDENT"  shift 71
	"LITERALINT"  shift 57
	"CAST"  shift 65
	"LITERALREAL"  shift 66
	"LITERALCHAR"  shift 67
	.  error

	expresion  goto 109


state 78
	sentencia : "RETURN" ';' .  (34)

	.  reduce 34


state 79
	sentencia : "RETURN" "NULL" . ';'  (35)

	';'  shift 110
	.  error


state 80
	sentencia : "RETURN" expresion . ';'  (36)
	expresion : expresion . '+' expresion  (45)
	expresion : expresion . '-' expresion  (46)
	expresion : expresion . '*' expresion  (47)
	expresion : expresion . '/' expresion  (48)
	expresion : expresion . '>' expresion  (49)
	expresion : expresion . '<' expresion  (50)
	expresion : expresion . "IGUAL" expresion  (51)
	expresion : expresion . "AND" expresion  (52)
	expresion : expresion . "OR" expresion  (53)
	expresion : expresion . "MAYORIGUAL" expresion  (54)
	expresion : expresion . "DISTINTO" expresion  (55)
	expresion : expresion . "MENORIGUAL" expresion  (56)
	expresion : expresion . '[' expresion ']'  (63)
	expresion : expresion . '.' "IDENT"  (64)

	"OR"  shift 87
	"AND"  shift 88
	"IGUAL"  shift 89
	"DISTINTO"  shift 90
	'<'  shift 91
	'>'  shift 92
	"MENORIGUAL"  shift 93
	"MAYORIGUAL"  shift 94
	'+'  shift 95
	'-'  shift 96
	'*'  shift 97
	'/'  shift 98
	'['  shift 99
	'.'  shift 100
	';'  shift 111
	.  error


state 81
	sentencia : "READ" expresion . ';'  (37)
	expresion : expresion . '+' expresion  (45)
	expresion : expresion . '-' expresion  (46)
	expresion : expresion . '*' expresion  (47)
	expresion : expresion . '/' expresion  (48)
	expresion : expresion . '>' expresion  (49)
	expresion : expresion . '<' expresion  (50)
	expresion : expresion . "IGUAL" expresion  (51)
	expresion : expresion . "AND" expresion  (52)
	expresion : expresion . "OR" expresion  (53)
	expresion : expresion . "MAYORIGUAL" expresion  (54)
	expresion : expresion . "DISTINTO" expresion  (55)
	expresion : expresion . "MENORIGUAL" expresion  (56)
	expresion : expresion . '[' expresion ']'  (63)
	expresion : expresion . '.' "IDENT"  (64)

	"OR"  shift 87
	"AND"  shift 88
	"IGUAL"  shift 89
	"DISTINTO"  shift 90
	'<'  shift 91
	'>'  shift 92
	"MENORIGUAL"  shift 93
	"MAYORIGUAL"  shift 94
	'+'  shift 95
	'-'  shift 96
	'*'  shift 97
	'/'  shift 98
	'['  shift 99
	'.'  shift 100
	';'  shift 112
	.  error


state 82
	sentencia : "PRINT" expresion . ';'  (38)
	expresion : expresion . '+' expresion  (45)
	expresion : expresion . '-' expresion  (46)
